# bookstore

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yaml  build.yml  workflow-pr.yaml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: index.html
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializers.py
order/tests/test_serializers/: test_order.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_alter_product_price.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category.py  test_product.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  product_viewset.py
